[ANZACATT-75] Fix text filter height on IE
* [ANZACATT-75] Fix text filter height on IE
* [ANZACATT-75] use rem() for text field height

--- a/docroot/sites/default/themes/custom/anzacatt/src/sass/page/_form.scss
+++ b/docroot/sites/default/themes/custom/anzacatt/src/sass/page/_form.scss
@@ -35,6 +35,7 @@ form {
     .views-exposed-widget {
       .form-type-textfield {
         input {
+          height: rem(45px);
           line-height: 1.9em;
           border-radius: rem(5px);
           border-width: rem(1px);
